# NexusBase

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/: nexus-builder.md
backend/: Dockerfile  finalize_move.py  fix_imports.py  fix_imports_v2.py  migrate_delta.py  mock_server.py  move_fix_agents.py  performance_test.py  pyproject.toml  test_delta_sync.py  test_pii.py  worker.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: edges.py  nodes.py  state.py  workflow.py
backend/app/api/: __init__.py  auth_deps.py  health.py  v1_auth.py  v1_ingest.py  v1_query.py  v1_settings.py  v1_tickets.py
backend/app/core/: audit_logger.py  config.py  dynamic_config.py  exceptions.py  logging_middleware.py  security.py
backend/app/domain/: feedback.py  tickets.py  users.py
backend/app/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
backend/app/infrastructure/: database.py
backend/app/ingestion/: __init__.py  chunker.py  embedder.py  loader.py  pii_scrubber.py  pipeline.py  validator.py  vision_loader.py
backend/app/knowledge_graph/: __init__.py  extractor.py  graph_builder.py  models.py  neo4j_client.py  traverser.py
backend/app/retrieval/: __init__.py  hybrid_search.py  logger.py  query_classifier.py  query_engine.py  semantic_cache.py
backend/app/services/: auth_service.py  ticket_service.py
backend/app/shared/: __init__.py  audit_logger.py  db.py  encryption.py  models.py
backend/evaluation/: golden_queries.json  run_eval.py
backend/tests/: __init__.py  test_semantic_splitter.py
dashboard/: package.json  (+2 more)
(+32 files in other folders)
